Atualização do site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bruno Ferreira – Portfólio</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style/style.css">
   <meta name="description" content="Portfólio profissional de Bruno Ferreira – Desenvolvimento de Sistemas, Matemática (UERJ), projetos e experiências." />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%230ea5e9'/%3E%3Ctext x='50' y='60' font-size='52' text-anchor='middle' fill='white' font-family='Arial, Helvetica, sans-serif'%3EB%3C/text%3E%3C/svg%3E" />
 </head>
@@ -197,6 +197,6 @@
       <div class="muted">Feito com HTML, CSS e um toque de JavaScript.</div>
     </div>
   </footer>
-  <script src="/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
