--- a/index.html
+++ b/index.html
@@ -197,6 +197,6 @@
       <div class="muted">Feito com HTML, CSS e um toque de JavaScript.</div>
     </div>
   </footer>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
