--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         </ul>
       </nav>
       <div class="actions">
-        <!-- <button id="themeToggle" class="btn" aria-label="Alternar tema">🌗</button> -->
         <button class="burger" id="burger" aria-label="Abrir menu">☰</button>
       </div>
     </div>
@@ -60,7 +59,7 @@
       </div>
       <div class="photo" aria-label="" >
         <!-- Ícone de usuário -->
-        <img src="/assets/Imagem do WhatsApp de 2025-08-15 à(s) 20.57.14_d553f42e.jpg" alt="foto">
+        <img src="assets/Imagem do WhatsApp de 2025-08-15 à(s) 20.57.14_d553f42e.jpg" alt="foto">
       </div>
     </section>
     <!-- SOBRE -->
