--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div style="display:flex;gap:10px;flex-wrap:wrap">
           <a class="btn" href="#contato">Fale comigo</a>
           <a class="btn" href="https://github.com/BrunoFerreira7">Ver projetos</a>
-          <a class="btn" href="/assets/Curriculo- Bruno Ferreira.pdf">Baixar CV</a>
+          <a class="btn" href="assets/Curriculo- Bruno Ferreira.pdf">Baixar CV</a>
         </div>
       </div>
       <div class="photo" aria-label="" >
